--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -129,6 +129,7 @@ label
     :padding-left 20px
     :text-align left
     :font-size 11px
+    :z-index 100
     ul
       :list-style-type none
       :margin 0
@@ -277,6 +278,9 @@ span.button
 div.price, span.price
   :color #339900
   :font-size 16px
+table span.price
+  :font-size inherit
+
 .flag
   :background-image url('/images/flag.png')
   :background-position 10px center 
@@ -439,5 +443,14 @@ tr.selected
   :background-color #F6F6F6
 td.fixed, th.fixed
   :width 60px
+td.icon, th.icon
+  :width 15px !important
+tr td a.photo_link
+  :display block
+  :width 19px
+  :height 18px
+  :overflow hidden
+  :text-indent -10000px
+  :background url('/images/photo.png')
 @import dashboard.sass
 @import listing.sass
