--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -452,5 +452,28 @@ tr td a.photo_link
   :overflow hidden
   :text-indent -10000px
   :background url('/images/photo.png')
+.list_view_icon
+  :margin-left -1px
+.grid
+  :border-top 1px solid #999
+  :padding 18px 18px 18px 0
+  .grid_result
+    :width 162px
+    :float left
+    :margin-left 20px
+    img
+      :border 1px solid #333
+    .image
+      :position relative
+      :width 162px
+    .title
+      :font-size 11px
+      :position absolute
+      :bottom 6px
+      :left 1px
+      :width 156px
+      :padding 2px
+      :background  #000
+      :color #FFF
 @import dashboard.sass
 @import listing.sass
