--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -484,6 +484,31 @@ tr td a.photo_link {
   text-indent: -10000px;
   background: url('/images/photo.png'); }
 
+.list_view_icon {
+  margin-left: -1px; }
+
+.grid {
+  border-top: 1px solid #999;
+  padding: 18px 18px 18px 0; }
+  .grid .grid_result {
+    width: 162px;
+    float: left;
+    margin-left: 20px; }
+    .grid .grid_result img {
+      border: 1px solid #333; }
+    .grid .grid_result .image {
+      position: relative;
+      width: 162px; }
+    .grid .grid_result .title {
+      font-size: 11px;
+      position: absolute;
+      bottom: 6px;
+      left: 1px;
+      width: 156px;
+      padding: 2px;
+      background: #000;
+      color: #FFF; }
+
 .dashboard_table {
   border-top: 10px solid #E5F3FC; }
 
