--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -455,6 +455,7 @@ tr td a.photo_link
 .list_view_icon
   :margin-left -1px
 .grid
+  :float left
   :border-top 1px solid #999
   :padding 18px 18px 18px 0
   .grid_result
