--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -488,6 +488,7 @@ tr td a.photo_link {
   margin-left: -1px; }
 
 .grid {
+  float: left;
   border-top: 1px solid #999;
   padding: 18px 18px 18px 0; }
   .grid .grid_result {
