Spacing plus linking

--- a/app/views/listings/_grid.html.haml
+++ b/app/views/listings/_grid.html.haml
@@ -4,11 +4,10 @@
     .grid_result
       .image
         - if result.photos_count > 0
-          = image_tag(result.photos.first.file.url(:thumb), :alt => h(result.title))
+          = link_to(image_tag(result.photos.first.file.url(:thumb), :alt => h(result.title)), result)
         - else
-          = image_tag('/images/no_photo.png', :alt => 'No Photo')
-        .title
-          = result.title
+          = link_to(image_tag('/images/no_photo.png', :alt => 'No Photo'), result)
+        = link_to result.title, result, :class => 'title'
       .details
         %span.price= result.price
         = result.location
