--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -462,6 +462,7 @@ tr td a.photo_link
     :width 162px
     :float left
     :margin-left 20px
+    :margin-bottom 20px
     img
       :border 1px solid #333
     .image
