--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -76,10 +76,13 @@ a
 .footer
   :clear both
   :background-color #EEE
-  :border-top 2px solid #CCC
-  :padding 25px 20px
+  :border-top 1px solid #CCC
+  :padding  0 20px 25px 20px
   :color #BBB
   :font-size 12px
+  .links
+    :clear both
+    :margin-top 25px
   a
     :margin-right 10px
     :color #AAA
@@ -477,5 +480,31 @@ tr td a.photo_link
       :padding 2px
       :background  #000
       :color #FFF
+.pagination
+  :margin-top -1px
+  :float left
+  :border-right 1px solid #CCC
+  :margin-bottom 20px
+  .link
+    :background-color #F6F6F6
+    :font-size 11px
+    :font-weight bold
+    :display block
+    :margin-top 1px
+    :width 30px
+    :line-height 30px
+    :float left
+    :border-left 1px solid #CCC
+    :text-align center
+    :border-bottom 1px solid #CCC
+    :margin-right 0
+  .ellipses
+    :background transparent
+    :border-bottom 0
+  .active
+    :background-color #FFF
+    :padding-top 1px
+    :margin-top 0
+    :color #333
 @import dashboard.sass
 @import listing.sass
