--- a/app/views/searches/show.html.haml
+++ b/app/views/searches/show.html.haml
@@ -8,14 +8,24 @@
 .search_details
   .search_views
     = search_view_links
-  #{pluralize(@results.total_entries, 'result')} matching "#{h(params[:q])}" #{link_to 'Filters', '#', :id => 'search_filters'}
+  = "#{pluralize(@results.total_entries, 'result')} matching \"#{h(params[:q])}\""
+  = link_to 'Filters', '#', :id => 'search_filters'
+  - if params[:grid_view]
+    .grid_view_details
+      .image_size
+        Image size: 
+        = params[:large] ? link_to('Small', params.merge(:large => nil)) : '<strong>Small</strong>'
+        = params[:large] ? '<strong>Large</strong>' : link_to('Large', params.merge(:large => 1))
+      .sort
+        Sort by:
+        = link_to 'Date', params.merge(:sort => 'date_desc')
 .search_filters
   - form_tag(search_path, :id => 'search_filter', :method => :get) do
     - params.select{ |key, value| ['q'].include?(key) }.each do |key, value|
       %input(type='hidden' name='#{key}' value='#{h(value)}')
     .other_filters
-      = text_field_tag :min, params[:min], :title => 'min price'
-      = text_field_tag :max, params[:max], :title => 'max price'
+      = text_field_tag :min, params[:min], :title => 'min price', :class => 'input_price'
+      = text_field_tag :max, params[:max], :title => 'max price', :class => 'input_price'
       = check_box_tag :title_only, 1, params[:title_only]
       Search title only
       = check_box_tag :include_completed, 1, params[:include_completed]
