Refactored selling and buying stuff

--- a/app/views/dashboards/_preferences.html.haml
+++ b/app/views/dashboards/_preferences.html.haml
@@ -5,16 +5,34 @@
     Settings
     Invites
   .right
-    - form_for(current_user) do |form|
-      .text_field
-        = form.label :username
-        = form.text_field :username
-      .password_field
-        = form.label :password
-        = form.password_field :password
-      .text_field
-        = form.label :email, 'Email Address'
-        = form.text_field :email
-      .submit_button
-        = image_submit_tag('save_button.png', :alt => "Save")
-        = link_to 'Cancel', '#'
+    #account_info
+      - form_for(current_user) do |form|
+        .text_field
+          = form.label :username
+          = form.text_field :username
+        .password_field
+          = form.label :password
+          = form.password_field :password
+        .text_field
+          = form.label :email, 'Email Address'
+          = form.text_field :email
+        .submit_button
+          = image_submit_tag('save_button.png', :alt => "Save")
+          = link_to 'Cancel', '#'
+    #location 
+      - form_for(current_user) do |form|
+        .text_field
+          = form.label :address_1
+          = form.text_field :address_1
+          = form.text_field :address_2
+        .text_field
+          = form.label :city
+          = form.text_field :city
+        .text_field
+          = form.label :state
+          = form.text_field :state
+        .text_field
+          = form.label :zip_cde
+          = form.text_field :zip_code
+        .submit_button
+          = image_submit_tag('save_button.png', :alt => "Save")
