--- a/public/stylesheets/sass/dashboard.sass
+++ b/public/stylesheets/sass/dashboard.sass
@@ -1,6 +1,6 @@
 .dashboard_table
   :border-top 10px solid #E5F3FC
-body.dashboards
+body.dashboards, body.buying, body.selling
   .content
     :margin 0
 
@@ -44,6 +44,9 @@ a.active_tab_heading
   :background-color #E5F3FC
   :color #333333
   :border-color #999999
+
+.offer_date
+  :width 130px
 
 tr.sold
   a, span.price
