--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,7 +1,7 @@
 .dashboard_table {
   border-top: 10px solid #E5F3FC; }
 
-body.dashboards .content {
+body.dashboards .content, body.buying .content, body.selling .content {
   margin: 0; }
 
 .dashboard_top {
@@ -45,6 +45,9 @@ a.active_tab_heading {
   background-color: #E5F3FC;
   color: #333333;
   border-color: #999999; }
+
+.offer_date {
+  width: 130px; }
 
 tr.sold a, tr.sold span.price {
   color: #999; }
