--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -571,7 +571,7 @@ tr td a.photo_link {
 .dashboard_table {
   border-top: 10px solid #E5F3FC; }
 
-body.dashboards .content {
+body.dashboards .content, body.buying .content, body.selling .content {
   margin: 0; }
 
 .dashboard_top {
@@ -615,6 +615,9 @@ a.active_tab_heading {
   background-color: #E5F3FC;
   color: #333333;
   border-color: #999999; }
+
+.offer_date {
+  width: 130px; }
 
 tr.sold a, tr.sold span.price {
   color: #999; }
