--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,6 +1,46 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+:focus {
+  outline: 0; }
+
+ins {
+  text-decoration: none; }
+
+del {
+  text-decoration: line-through; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 body {
   background-color: #EEE;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  min-width: 980px; }
 
 body, p, div, h4 {
   margin: 0;
@@ -11,22 +51,86 @@ h4 {
   font-size: 10px;
   font-weight: bold; }
 
+button {
+  vertical-align: middle;
+  font-style: normal;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  border: 1px solid #aaa;
+  color: #333;
+  text-shadow: 0px 1px 0px #fff;
+  background: url('/images/btn_bg.png') 0 0 repeat-x; }
+  button:hover {
+    border: 1px solid #777;
+    cursor: pointer; }
+  button:active {
+    background: #ddd;
+    outline: none; }
+
+.btn_lg {
+  height: 36px;
+  font-size: 20px;
+  padding: 0 12px; }
+
+.btn_med {
+  height: 30px;
+  font-size: 16px;
+  padding: 0 10px; }
+
+.btn_sm {
+  height: 26px;
+  font-size: 14px;
+  padding: 0 8px; }
+
+.post_link {
+  background: #2098e5;
+  border: 1px solid #0B54B1;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 5px 11px;
+  text-shadow: 0 -1px 0 #093366;
+  float: right;
+  margin: 15px 15px; }
+  .post_link:hover {
+    border-color: #062054;
+    color: #fff; }
+  .post_link:active {
+    background: #1780D1; }
+
 .content {
   margin-left: 20px; }
 
 body.searches .content {
-  margin-left: 0; }
+  margin-left: 0;
+  min-width: 990px; }
 
-.text_field input {
-  border: 1px solid #CCC;
-  padding: 5px; }
+.text_field input, #search input, #search_small input, .search_filters input {
+  border-top: 1px solid #777;
+  padding: 2px 5px 2px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  height: 22px;
+  color: #ddd;
+  font-size: 13px;
+  vertical-align: middle;
+  border-top: 1px solid #999;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  background-color: #fff; }
+  .text_field input:focus, #search input:focus, #search_small input:focus, .search_filters input:focus {
+    background-color: #FFD;
+    color: #333333; }
 
 a {
-  color: #2098E5;
+  color: #2098e5;
   text-decoration: none;
   outline: none; }
   a img {
     border: 0; }
+  a:hover {
+    color: #2d7bb2; }
 
 .container {
   float: left;
@@ -36,40 +140,47 @@ a {
 
 .header {
   text-align: right;
-  padding: 20px 20px; }
+  height: 55px;
+  width: 100%; }
   .header .logged_out a {
     height: 25px;
     line-height: 25px;
     overflow: hidden;
-    border: 1px solid #FFF;
-    padding: 5px 25px; }
+    border: 1px solid transparent;
+    padding: 5px 8px;
+    font-size: 12px;
+    font-weight: bold; }
     .header .logged_out a.active {
       background-color: #F4F4F4;
       border: 1px solid #999999;
       border-bottom: 0;
-      color: #000; }
-  .header .login {
-    display: block;
+      color: #ccc; }
+  .header #register {
     float: right;
-    margin-left: 5px;
-    position: relative;
-    z-index: 1; }
+    margin: 11px 17px 0 0; }
+  .header .login {
+    float: right;
+    z-index: 1;
+    margin: 17px 5px;
+    position: relative; }
     .header .login .login_form {
       z-index: -1;
       text-align: left;
       right: 0px;
-      margin-top: 3px;
+      margin-top: 5px;
       background-color: #F4F4F4;
       border: 1px solid #999999;
       width: 200px;
-      padding: 10px;
+      padding: 15px 15px 8px;
       display: none;
       font-size: 11px;
       position: absolute; }
       .header .login .login_form a {
         border: none;
         padding: 0;
-        margin-left: 20px; }
+        margin-left: 20px;
+        font-size: 11px;
+        font-weight: normal; }
       .header .login .login_form label {
         display: inline;
         text-transform: lowercase;
@@ -78,6 +189,13 @@ a {
       .header .login .login_form .text_field input {
         width: 180px;
         margin-bottom: 10px; }
+      .header .login .login_form .remember {
+        float: left;
+        width: auto;
+        margin: 8px 0 0 0; }
+        .header .login .login_form .remember input {
+          margin: 0;
+          padding: 0; }
 
 .footer {
   clear: both;
@@ -88,10 +206,13 @@ a {
   font-size: 12px; }
   .footer .links {
     clear: both;
-    margin-top: 25px; }
+    margin: 25px 0 5px 0; }
   .footer a {
     margin-right: 10px;
-    color: #AAA; }
+    color: #AAA;
+    font-weight: bold; }
+    .footer a:hover {
+      color: #555; }
 
 table {
   width: 100%; }
@@ -104,36 +225,36 @@ label {
     font-weight: normal; }
 
 .home_content {
-  margin-top: 200px; }
+  margin: 100px auto;
+  width: 710px; }
 
 .blur {
   color: #CCC; }
-
-#search_button {
-  vertical-align: bottom; }
 
 .right_arrow {
   background: url('/images/right_arrow.png') right center no-repeat;
   padding-right: 10px; }
 
 #search_small {
-  float: left; }
+  float: left;
+  width: 500px;
+  margin: 15px 0px; }
   #search_small input {
     outline: none; }
   #search_small #q {
-    font-size: 13px;
+    font-size: 15px;
     margin: 0;
-    padding: 4px 10px;
-    border: 1px solid #CCC;
+    padding: 3px 5px;
     border-right: 0;
-    width: 320px; }
+    width: 255px; }
   #search_small #zip_code {
-    font-size: 13px;
+    font-size: 15px;
     margin-left: -5px;
-    width: 4.1em;
-    padding: 4px 10px;
-    border: 1px solid #CCC; }
+    width: 58px;
+    padding: 3px 5px;
+    font-weight: normal; }
   #search_small #categories {
+    background: #fff;
     display: none;
     position: absolute;
     left: 100%;
@@ -155,22 +276,21 @@ label {
 
 #search {
   clear: both;
-  padding-top: 40px; }
+  padding-top: 20px; }
   #search input {
     outline: none; }
   #search #q {
-    font-size: 16px;
+    font-size: 20px;
     margin: 0;
-    padding: 5px 10px;
-    border: 1px solid #CCC;
+    padding: 6px 10px;
     border-right: 0;
-    width: 320px; }
+    width: 350px; }
   #search #zip_code {
-    font-size: 16px;
+    font-size: 20px;
     margin-left: -5px;
-    width: 4.1em;
-    padding: 5px 10px;
-    border: 1px solid #CCC; }
+    width: 90px;
+    padding: 6px 10px;
+    font-weight: normal; }
   #search #categories {
     display: none;
     position: absolute;
@@ -195,40 +315,45 @@ label {
 
 #browse {
   font-size: 12px;
-  margin-left: 10px; }
+  margin-left: 10px;
+  font-weight: bold; }
 
 .logo {
-  width: 108px;
-  height: 28px;
+  width: 215px;
+  height: 42px;
   text-indent: -10000px;
   overflow: hidden;
-  background: url('/images/logo.png') top left no-repeat;
-  float: left; }
+  background: url('/images/logo_home.gif') top left no-repeat;
+  float: left;
+  margin-left: 115px; }
 
 .logo_top a {
   display: block;
-  width: 108px;
-  height: 28px;
+  width: 150px;
+  height: 32px;
   text-indent: 10000px;
   overflow: hidden;
-  background: url('/images/logo_top.png') top left no-repeat;
-  float: left; }
+  background: url('/images/logo.gif') top left no-repeat;
+  float: left;
+  margin: 15px 15px; }
 
 .tagline {
   float: left;
-  color: #999999;
-  line-height: 32px;
-  margin-left: 6px; }
+  color: #bbb;
+  line-height: 60px;
+  margin-left: 12px;
+  font-size: 12px;
+  letter-spacing: 1px; }
 
 #search_details {
   display: none;
-  background-color: #E5F3FC;
-  width: 319px;
-  padding: 5px 10px;
-  border: 1px solid #CCC;
-  border-top: 0;
+  background-color: #e1f3fd;
+  width: 357px;
+  padding: 12px 6px;
+  border: 1px solid #ddd;
   font-size: 11px;
   position: absolute;
+  margin-top: -1px;
   float: left; }
   #search_details label {
     display: inline; }
@@ -261,7 +386,7 @@ label {
 
 .submit {
   clear: both;
-  padding: 25px 0; }
+  padding: 10px 0; }
 
 #shipping {
   position: relative; }
@@ -365,17 +490,12 @@ table span.price {
   font-size: 12px;
   color: #999999; }
 
-.post_link {
-  margin-left: 20px; }
-  .post_link img {
-    vertical-align: middle; }
-
 table {
   clear: both;
   border-spacing: 0; }
   table thead {
     background-color: #F5F5F5;
-    color: #999999;
+    color: #ccc;
     text-align: left; }
   table th, table td {
     padding-left: 20px;
@@ -386,10 +506,12 @@ table {
     font-size: 14px;
     padding: 5px 0 5px 20px; }
     table th a {
-      color: #999999;
+      color: #ccc;
       font-weight: bold; }
       table th a.active {
         color: #333; }
+      table th a:hover {
+        color: #666; }
   table th.hidden span {
     display: none; }
   table.inner {
@@ -403,19 +525,22 @@ table {
       color: #999999; }
 
 span.user {
-  font-size: 12px; }
+  float: right;
+  width: auto;
+  font-size: 11px;
+  margin: 22px 0 0 0;
+  font-weight: bold; }
   span.user .details {
-    margin-right: 20px; }
+    margin: 0 8px 0 0; }
   span.user img {
-    vertical-align: middle; }
+    vertical-align: middle;
+    margin-left: 2px; }
 
 .search_details {
   color: #CCCCCC;
   margin-left: 20px;
-  margin-bottom: 10px; }
-  .search_details .search_views {
-    display: inline;
-    margin-right: 20px; }
+  margin-bottom: 5px;
+  font-size: 11px; }
   .search_details img {
     vertical-align: bottom; }
 
@@ -428,53 +553,112 @@ span.user {
 
 .search_filters {
   font-size: 11px;
-  display: none;
-  background-color: #E5F3FC;
-  padding: 10px 0;
-  border-top: 1px solid #999999;
+  display: visible;
+  background-color: #e1f3fd;
+  padding: 13px 0;
+  height: 24px;
   float: left;
-  width: 100%; }
+  width: 100%;
+  position: relative; }
   .search_filters .other_filters {
-    margin-left: 20px;
-    float: left; }
+    margin-left: 80px;
+    float: left;
+    width: 520px; }
+  .search_filters .search_views {
+    position: absolute;
+    left: 15px;
+    top: 16px; }
+    .search_filters .search_views a:hover {
+      opacity: .7; }
+  .search_filters label {
+    display: block;
+    padding-right: 10px;
+    color: #2D7BB2;
+    font-size: 11px;
+    float: left;
+    white-space: nowrap;
+    margin-top: 1px; }
+    .search_filters label input {
+      margin: 0 2px 0 0;
+      vertical-align: middle; }
+    .search_filters label span {
+      vertical-align: middle;
+      font-weight: bold;
+      margin-right: 4px; }
+  .search_filters .input_price {
+    padding: 2px 4px 2px 2px;
+    width: 45px;
+    font-size: 12px;
+    height: 18px;
+    margin-left: 6px;
+    text-align: right; }
 
 .image_button {
   vertical-align: middle; }
 
 #slider {
-  font-size: 60%; }
+  font-size: 60%;
+  margin-top: -2px; }
   #slider .ui-slider-range {
-    background: #DDD; }
+    background: #AFD1E5; }
   #slider .ui-slider-handle {
     background: #FFF;
-    border-color: #333333; }
+    border-color: #555; }
 
 #slider_amount {
   border: 0;
   background: transparent;
-  color: #1F98E5;
+  color: #2d7bb2;
   display: inline;
-  width: 70px; }
+  width: 57px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 11px;
+  font-weight: bold; }
 
-.search_details_left {
-  width: 150px;
+#search_details_left {
+  width: 170px;
   float: left;
-  border-right: 1px solid #CCC; }
+  border-right: 1px solid #CAE7FC; }
+  #search_details_left label {
+    display: block;
+    color: #2D7BB2;
+    font-size: 11px;
+    float: left;
+    white-space: nowrap;
+    margin-left: 5px;
+    height: 20px; }
+    #search_details_left label input {
+      margin: 0 2px 0 0;
+      vertical-align: middle; }
+    #search_details_left label span {
+      vertical-align: middle;
+      font-weight: bold;
+      margin-right: 4px; }
 
-.search_details_right {
-  margin-left: 10px;
+#search_details_right {
+  margin-left: 30px;
   float: left;
   width: 150px; }
-
-.search_price {
-  width: 50px;
-  margin-bottom: 10px;
-  border: 1px solid #BBBBBB; }
+  #search_details_right .search_price {
+    padding: 2px 4px 2px 2px;
+    width: 45px;
+    font-size: 12px;
+    height: 18px;
+    margin-left: 6px;
+    text-align: right;
+    width: 50px;
+    margin-bottom: 10px; }
 
 #search_radius {
   float: left;
   margin-left: 20px;
-  margin-right: 20px; }
+  margin-right: 20px;
+  margin-top: -3px;
+  font-weight: bold;
+  color: #AFD1E5; }
+  #search_radius input {
+    padding: 0;
+    margin: -1px 0 2px 0; }
 
 tr.selected {
   background-color: #F6F6F6; }
@@ -541,6 +725,8 @@ tr td a.photo_link {
     text-align: center;
     border-bottom: 1px solid #CCC;
     margin-right: 0; }
+    .pagination .link:hover {
+      background-color: #fff; }
   .pagination .ellipses {
     background: transparent;
     border-bottom: 0; }
@@ -559,11 +745,6 @@ tr td a.photo_link {
   .grid_view_details .sort {
     margin-left: 30px;
     display: inline; }
-
-.input_price {
-  border: 1px solid #CCC;
-  padding: 5px;
-  width: 80px; }
 
 .listing_table {
   border-top: 1px solid #999; }
