--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -124,7 +124,7 @@ a
     :margin 11px 17px 0 0
   .login
     :float right
-    :z-index 1
+    :z-index 1000
     :margin 17px 5px
     :position relative
     .login_form
@@ -370,12 +370,16 @@ span.button
   :font-size 12px
 .description
   :padding-top 20px
-  :font-size 12px
-  :color #333333
+  :font-size 14px
+  color = !color1
   :clear both
+  :line-height 1.3
 div.price, span.price
-  :color #339900
-  :font-size 16px
+  :color #54AE00
+  :font-size 22px
+  :font-weight normal
+div.price
+  :width 300px
 table span.price
   :font-size inherit
 
@@ -425,14 +429,20 @@ table span.price
       :height 120px
 .seller_details
   :clear both
+  :font-size 11px
+  :margin 5px 0
 .listing_details
   :width 355px
   div.price
     :float left
   div.location  
     :float right
+    :font-size 12px
+    :color #ccc
   h1
-    :font-size 16px
+    :font-size 20px
+    color = !color1
+    :margin 0 0 3px 0
 
 .date
   :font-size 12px
