--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -160,7 +160,7 @@ a {
     margin: 11px 17px 0 0; }
   .header .login {
     float: right;
-    z-index: 1;
+    z-index: 1000;
     margin: 17px 5px;
     position: relative; }
     .header .login .login_form {
@@ -417,13 +417,18 @@ span.button {
 
 .description {
   padding-top: 20px;
-  font-size: 12px;
+  font-size: 14px;
   color: #333333;
-  clear: both; }
+  clear: both;
+  line-height: 1.3; }
 
 div.price, span.price {
-  color: #339900;
-  font-size: 16px; }
+  color: #54AE00;
+  font-size: 22px;
+  font-weight: normal; }
+
+div.price {
+  width: 300px; }
 
 table span.price {
   font-size: inherit; }
@@ -475,16 +480,22 @@ table span.price {
       height: 120px; }
 
 .seller_details {
-  clear: both; }
+  clear: both;
+  font-size: 11px;
+  margin: 5px 0; }
 
 .listing_details {
   width: 355px; }
   .listing_details div.price {
     float: left; }
   .listing_details div.location {
-    float: right; }
+    float: right;
+    font-size: 12px;
+    color: #ccc; }
   .listing_details h1 {
-    font-size: 16px; }
+    font-size: 20px;
+    color: #333333;
+    margin: 0 0 3px 0; }
 
 .date {
   font-size: 12px;
